--- a/Index.css
+++ b/Index.css
@@ -1,3 +1,23 @@
-div{
-    height: 500px;
+.box{
+    height: 100px;
+    width: 100px;
+    border: 2px solid black;
+    margin: 2px;
+    
+}
+
+.one{
+    
+    background-color: blueviolet;
+  position: relative;
+  z-index: 1;
+}
+.two{
+    background-color: brown;
+    position: relative;
+    bottom: 50px;
+    z-index: -1;
+}
+.three{
+    background-color: aquamarine;
 }
